--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "require": {
         "php": ">=8.0"
     },
+    "require-dev": {
+        "symfony/var-dumper": "^6.0"
+    },
     "minimum-stability": "stable",
     "extra":{
         "branch-alias":{
